--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdmFuentesRSS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdmFuentesRSS.designer.cs">
+      <DependentUpon>AdmFuentesRSS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_Campaña.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +108,9 @@
     <Compile Include="Vista.designer.cs">
       <DependentUpon>Vista.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdmFuentesRSS.resx">
+      <DependentUpon>AdmFuentesRSS.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_Campaña.resx">
       <DependentUpon>Form_Campaña.cs</DependentUpon>
     </EmbeddedResource>
