--- a/Servicios/Unity.config
+++ b/Servicios/Unity.config
@@ -8,7 +8,7 @@
   <alias alias="RssReader" type="Servicios.RawXmlRssReader, Servicios" />
 
   <!-- Alias del Fachada del Modelo. -->
-  <alias alias="Fachada"                  type="Modelo.Fachada, Modelo" />
+  <alias alias="Fachada"                  type="Dominio.Fachada, Dominio" />
 
   <!-- Alias de todas las Fachada CRUD de Persistencia. -->
   <alias alias="FachadaCRUDBanner"        type="Persistencia.FachadaCRUDBanner, Persistencia" />
