--- a/Testings/Testings.csproj
+++ b/Testings/Testings.csproj
@@ -60,9 +60,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Modelo\Modelo.csproj">
-      <Project>{98ab3e84-c427-4f3d-8144-8484fa92055b}</Project>
-      <Name>Modelo</Name>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{99913064-1a87-45eb-a137-c9c7239f0909}</Project>
+      <Name>Dominio</Name>
     </ProjectReference>
     <ProjectReference Include="..\Persistencia\Persistencia.csproj">
       <Project>{167b1131-2161-47b1-a62d-32d0cd01aab4}</Project>
@@ -71,10 +71,6 @@
     <ProjectReference Include="..\Servicios\Servicios.csproj">
       <Project>{b3c15444-6871-4d3b-8610-ed46371a402a}</Project>
       <Name>Servicios</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UI.Tipos\UI.Tipos.csproj">
-      <Project>{c15c208f-15c7-43b3-90c4-3d9f968975fd}</Project>
-      <Name>UI.Tipos</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
