--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -157,13 +157,13 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Dominio\Dominio.csproj">
+      <Project>{99913064-1a87-45eb-a137-c9c7239f0909}</Project>
+      <Name>Dominio</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Servicios\Servicios.csproj">
       <Project>{b3c15444-6871-4d3b-8610-ed46371a402a}</Project>
       <Name>Servicios</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UI.Tipos\UI.Tipos.csproj">
-      <Project>{c15c208f-15c7-43b3-90c4-3d9f968975fd}</Project>
-      <Name>UI.Tipos</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
