--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -46,7 +46,7 @@
     <Compile Include="ExtensionLista.cs" />
     <Compile Include="Fachada.cs" />
     <Compile Include="Imagen.cs" />
-    <Compile Include="ITexto.cs" />
+    <Compile Include="Fuente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -55,8 +55,13 @@
     </Compile>
     <Compile Include="RangoFecha.cs" />
     <Compile Include="RangoHorario.cs" />
-    <Compile Include="RSS.cs" />
-    <Compile Include="TextoFijo.cs" />
+    <Compile Include="FuenteRSS.cs" />
+    <Compile Include="FuenteTextoFijo.cs" />
+    <Compile Include="RSS\IRssReader.cs" />
+    <Compile Include="RSS\RawXmlRssReader.cs" />
+    <Compile Include="RSS\RssItem.cs" />
+    <Compile Include="RSS\RssReader.cs" />
+    <Compile Include="RSS\SyndicationFeedRssReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
