--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -76,6 +76,7 @@
     <Compile Include="XMLServices.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Unity.config" />
   </ItemGroup>
