--- a/Servicios/Unity.config
+++ b/Servicios/Unity.config
@@ -2,39 +2,25 @@
 <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
 
   
-  <!-- Alias a la interface del lector de RSS -->
-  <alias alias="IRssReader" type="Servicios.IRssReader, Servicios" />
-  <!-- Alias a la implementación específica del lector de RSS. -->
-  <alias alias="RssReader" type="Servicios.RawXmlRssReader, Servicios" />
 
   <!-- Alias del Fachada del Modelo. -->
-  <alias alias="Fachada"                  type="Dominio.Fachada, Dominio" />
+  <alias alias="FachadaModelo"                  type="Dominio.Fachada, Dominio" />
 
-  <!-- Alias de todas las Fachada CRUD de Persistencia. -->
-  <alias alias="FachadaCRUDBanner"        type="Persistencia.FachadaCRUDBanner, Persistencia" />
-  <alias alias="FachadaCRUDCampaña"       type="Persistencia.FachadaCRUDCampaña, Persistencia" />
-  <alias alias="FachadaCRUDInformacion"   type="Persistencia.FachadaCRUDInformacion, Persistencia" />
+  <!-- Alias de todas las Fachada de Persistencia. -->
+  <alias alias="FachadaPersistencia"        type="Persistencia.Fachada, Persistencia" />
 
 
 
   <container>
     <!-- Mapeo de referencias -->
     
-    <register type="IRssReader" mapTo="RssReader">
-      <lifetime type="singleton"></lifetime>
-    </register>
-    <register type="Fachada">
+    <register type="FachadaModelo">
       <lifetime type="singleton"/>
     </register>
-    <register type="FachadaCRUDBanner">
-      <lifetime type="singleton"/>
-    </register>
-    <register type="FachadaCRUDCampaña">
-      <lifetime type="singleton"/>
-    </register>
-    <register type="FachadaCRUDInformacion">
-      <lifetime type="singleton"/>
-    </register>
+    
+    <register type="FachadaPersistencia"/>
+    
+
     
   </container>
 </unity>
