--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Form_Configuracion_Campaña.designer.cs">
       <DependentUpon>Form_Configuracion_Campaña.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form_FuenteTextoFijo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form_FuenteTextoFijo.Designer.cs">
+      <DependentUpon>Form_FuenteTextoFijo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_SeleccionRangoHorario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form_Configuracion_Campaña.resx">
       <DependentUpon>Form_Configuracion_Campaña.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form_FuenteTextoFijo.resx">
+      <DependentUpon>Form_FuenteTextoFijo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_SeleccionRangoHorario.resx">
       <DependentUpon>Form_SeleccionRangoHorario.cs</DependentUpon>
