--- a/Servicios/packages.config
+++ b/Servicios/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="log4net" version="2.0.5" targetFramework="net46" />
   <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
