--- a/UI/App.config
+++ b/UI/App.config
@@ -5,13 +5,28 @@
              type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" 
              requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
 
-
+  <log4net>
+    <root>
+      <level value="DEBUG"/>
+      <appender-ref ref="RollingFile" />
+    </root>
+    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+      <file value="log-file.txt" />
+      <appendToFile value="true" />
+      <maximumFileSize value="10MB"/>
+      <maxSizeRollBackups value="5"/>
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%d %level %thread %logger - %message%newline"/>
+      </layout>
+    </appender>
+  </log4net>
 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
