--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Campaña.cs" />
     <Compile Include="Fachada.cs" />
     <Compile Include="Imagen.cs" />
-    <Compile Include="Fuente.cs" />
+    <Compile Include="IFuente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
