Actualización Si o Si: Solución Problema RSS al eliminar Banner se elimnaba el RSS asociado y no el Text fuijo Y además se soluciona el problema de cuando tenes un RSS asociado al banner y actualzias dicho Banner por un TextoFijo antes directamente trataba de actualizar pero no existía el TExtoFijo asociado entonces -->Exception

--- a/Testings/App.config
+++ b/Testings/App.config
@@ -6,13 +6,18 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" 
-                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CarteleriaContext" 
-         connectionString="server=(localdb)\MSSQLLocalDB; database=CarteleriaContext; integrated security=true;" 
-  providerName="System.Data.SqlClient" />
+    <add name="CarteleriaContext" connectionString="server=(localdb)\MSSQLLocalDB; database=CarteleriaContext; integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
