--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -66,10 +66,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extras\AutoMapper.cs" />
     <Compile Include="ControladorBanner.cs" />
     <Compile Include="ControladorCampaña.cs" />
+    <Compile Include="Extras\AutoMapper.cs" />
+    <Compile Include="Banner.cs" />
+    <Compile Include="Campaña.cs" />
     <Compile Include="ControladorFuente.cs" />
+    <Compile Include="FachadaDominio.cs" />
     <Compile Include="Imagen.cs" />
     <Compile Include="IFuente.cs" />
     <Compile Include="ImagenServices.cs" />
