--- a/Dominio/packages.config
+++ b/Dominio/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.2.0" targetFramework="net451" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
+  <package id="Moq" version="4.5.21" targetFramework="net451" />
   <package id="Unity" version="4.0.1" targetFramework="net451" />
 </packages>
